# py_openvpn_manager_interface

./: .gitignore  README.md  pyproject.toml
ovpn_manager/: __init__.py  model.py
py_ovpn_mi/: vpn_manager.py
tests/: test_main.py  test_model.py
